add to playground.ipynb (zero shot), create helpers.py with tokenizing

--- a/cs336_alignment/playground.ipynb
+++ b/cs336_alignment/playground.ipynb
@@ -2,18 +2,138 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d488a61c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset"
+    "import jsonlines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "03596764",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_results = []\n",
+    "with jsonlines.open(\"../results/zero_shot/qwen_gsm8k_zero_shot_20251212_142803.jsonl\", \"r\") as f:\n",
+    "    for result in f:\n",
+    "        all_results.append(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0faab7dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_only = all_results[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ae66b426",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'example_id': 0,\n",
+       " 'question': \"Janet’s ducks lay 16 eggs per day. She eats three for breakfast every morning and bakes muffins for her friends every day with four. She sells the remainder at the farmers' market daily for $2 per fresh duck egg. How much in dollars does she make every day at the farmers' market?\",\n",
+       " 'ground_truth_answer': '18',\n",
+       " 'model_generation': ' We should break the problem into smaller parts: the daily duck production, the number of eggs Janet gives her assistant:\\n\\\\[\\n\\\\text{Daily duck production: } 16 \\\\, \\\\text{eggs/day}\\n\\\\]\\n\\\\[\\n\\\\text{Eggs given to assistant: } 3 \\\\, \\\\text{per day}\\n\\\\]\\n\\\\[\\n\\\\text{Eggs Dud_after_assistant: } 16 - 3 = 13 \\\\, \\\\text{eggs/day}\\n\\\\]\\n\\\\[\\n\\\\text{Eggs given to friends: } 4 \\\\, \\\\text{per day}\\n\\\\]\\n\\\\[\\n\\\\text{Eggs Dud_after_friends: } 13 - 4 = 9 \\\\, \\\\text{eggs/day}\\n\\\\]\\n\\\\[\\n\\\\text{The number of fresh eggs sold: } 9 \\\\, \\\\text{eggs/day}\\n\\\\]\\n\\\\[\\n\\\\text{The price per fresh duck egg: } \\\\$2\\n\\\\]\\n\\\\[\\n\\\\text{Therefore, the final solution is:} \\\\, 9 \\\\, \\\\text{eggs/day} \\\\times \\\\$2/egg = \\\\$18\\n\\\\]\\nThe Answer: \\n\\\\[\\n\\\\boxed{18}\\n\\\\]\\n```python\\n# Defining the variables\\ndaily_ducks = 16\\neggs_given_to_assistant = 3\\neggs_given_to_friends = 4\\nprice_per_egg = 2\\n\\n# Calculating the remaining eggs after giving some to the assistant and friends\\nremaining_eggs = daily_ducks - eggs_given_to_assistant - eggs_given_to_friends\\n\\n# Calculating the total money made from selling the remaining eggs\\nmoney_made = remaining_eggs * price_per_egg\\n\\n# Printing the final answer\\nprint(money_made)\\n```',\n",
+       " 'format_reward': 0.0,\n",
+       " 'answer_reward': 0.0,\n",
+       " 'reward': 0.0}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_only[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "850372c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format_and_answer = 0\n",
+    "format_no_answer = 0\n",
+    "no_format_answer = 0\n",
+    "no_format_no_answer = 0\n",
+    "for result in results_only:\n",
+    "    if result['reward'] > 0:\n",
+    "        format_and_answer += 1\n",
+    "    elif result['format_reward'] > 0:\n",
+    "        format_no_answer += 1\n",
+    "    elif result['answer_reward'] > 0:\n",
+    "        no_format_answer += 1\n",
+    "    else:\n",
+    "        no_format_no_answer += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7ee07a74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct: 32; Format, no answer: 226; No format, answer: 0; No format, no answer: 1061.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Correct: {format_and_answer}; Format, no answer: {format_no_answer}; No format, answer: {no_format_answer}; No format, no answer: {no_format_no_answer}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a9dee44",
+   "metadata": {},
+   "source": [
+    "Observing at least 10 cases where format reward is 0, do you think the issue is with the base model's output, or the parser?\n",
+    "\n",
+    "Most of the issues are with output, but there are some where I believe it's a parser issue.\n",
+    "\n",
+    "What about in (at least 10) cases where format reward is 1 but answer reward is 0?\n",
+    "\n",
+    "There are some where the answer is correct but for some reason does not get a reward, but some where the answer is just incorrect.\n",
+    "\n",
+    "Accuracy: 2.43%"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "cs336",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
