finish analyze_basline.ipynb notebook

--- a/cs336_alignment/notebooks/analyze_baseline.ipynb
+++ b/cs336_alignment/notebooks/analyze_baseline.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observe at least 10 cases where format reward is 0, do we think the issue is with the base model's output, or the parser?"
+    "## Observe at least 10 cases where format reward is 0, do we think the issue is with the base model's output, or the parser?"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observe at least 10 cases where format reward is 1 but the answer reward is 0, do we think the issue is with the base model's output, or the parser?"
+    "## Observe at least 10 cases where format reward is 1 but the answer reward is 0, do we think the issue is with the base model's output, or the parser?"
    ]
   },
   {
@@ -246,6 +246,15 @@
    "metadata": {},
    "source": [
     "Observing 10 cases where format reward is 1 but the answer reward is 0, I am now confused by why previous answers had some format reward of 0. Many of them correctly had answer tags. I only see 1 mistake here where I believe the answer reward also should have been 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How well does the Qwen 2.5 Math 1.5B zero-shot baseline perform on MATH?\n",
+    "\n",
+    "Not well. We have an average reward of 0.0276, which means 138 of 5000 problems were correctly solved and formatted."
    ]
   }
  ],
