tests work again before session ends, fixing log_generations

--- a/cs336_alignment/notebooks/analyze_baseline.ipynb
+++ b/cs336_alignment/notebooks/analyze_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,6 +256,57 @@
     "\n",
     "Not well. We have an average reward of 0.0276, which means 138 of 5000 problems were correctly solved and formatted."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question Only Prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'noformat_noanswer': 5000})\n"
+     ]
+    }
+   ],
+   "source": [
+    "QO_RESULT_PATH = \"../../results/baseline_results_question_only.jsonl\"\n",
+    "\n",
+    "results = []\n",
+    "with open(QO_RESULT_PATH, \"r\") as f:\n",
+    "    for line in f:\n",
+    "        item = json.loads(line)\n",
+    "        format_reward = item.get(\"format_reward\")\n",
+    "        answer_reward = item.get(\"answer_reward\")\n",
+    "        reward = item.get(\"reward\")\n",
+    "\n",
+    "        if format_reward and answer_reward:\n",
+    "            item[\"class\"] = \"format_answer\"\n",
+    "        elif format_reward:\n",
+    "            item[\"class\"] = \"format_noanswer\"\n",
+    "        elif answer_reward:\n",
+    "            item[\"class\"] = \"noformat_answer\"\n",
+    "        else:\n",
+    "            item[\"class\"] = \"noformat_noanswer\"\n",
+    "\n",
+    "        results.append(item)\n",
+    "\n",
+    "classes = Counter([item[\"class\"] for item in results])\n",
+    "print(classes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
